--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     <div class="container">
         <div class="carousel">
             <div class="item a">
-                <img src="https://github.com/inovus-labs/kiosk-display/blob/5336fa3d3fe3b8a93d90983e4b660faf82de6b40/assets/a.png" alt="image" />
+                <img src="https://raw.githubusercontent.com/inovus-labs/kiosk-display/5336fa3d3fe3b8a93d90983e4b660faf82de6b40/assets/a.png" alt="image" />
             </div>
             <div class="item b">
-                <img src="https://github.com/inovus-labs/kiosk-display/blob/5336fa3d3fe3b8a93d90983e4b660faf82de6b40/assets/b.png" alt="image" />
+                <img src="https://raw.githubusercontent.com/inovus-labs/kiosk-display/5336fa3d3fe3b8a93d90983e4b660faf82de6b40/assets/b.png" alt="image" />
             </div>
             <div class="item c">
-                <img src="https://github.com/inovus-labs/kiosk-display/blob/5336fa3d3fe3b8a93d90983e4b660faf82de6b40/assets/c.png" alt="image" />
+                <img src="https://raw.githubusercontent.com/inovus-labs/kiosk-display/5336fa3d3fe3b8a93d90983e4b660faf82de6b40/assets/c.png" alt="image" />
             </div>
             <div class="item d">
-                <img src="https://github.com/inovus-labs/kiosk-display/blob/5336fa3d3fe3b8a93d90983e4b660faf82de6b40/assets/d.png" alt="image" />
+                <img src="https://raw.githubusercontent.com/inovus-labs/kiosk-display/5336fa3d3fe3b8a93d90983e4b660faf82de6b40/assets/d.png" alt="image" />
             </div>
             <div class="item e">
-                <img src="https://github.com/inovus-labs/kiosk-display/blob/5336fa3d3fe3b8a93d90983e4b660faf82de6b40/assets/e.png" alt="image" />
+                <img src="https://raw.githubusercontent.com/inovus-labs/kiosk-display/5336fa3d3fe3b8a93d90983e4b660faf82de6b40/assets/e.png" alt="image" />
             </div>
             <div class="item f">
-                <img src="https://github.com/inovus-labs/kiosk-display/blob/5336fa3d3fe3b8a93d90983e4b660faf82de6b40/assets/f.png" alt="image" />
+                <img src="https://raw.githubusercontent.com/inovus-labs/kiosk-display/5336fa3d3fe3b8a93d90983e4b660faf82de6b40/assets/f.png" alt="image" />
             </div>
         </div>
     </div>
